--- a/svm_.ipynb
+++ b/svm_.ipynb
@@ -22,7 +22,7 @@
         "id": "hNsQ9olJ0mu1",
         "outputId": "e3a4b254-8f30-4a5c-d554-4bbce77a3899"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "gYx3aOtN0f79"
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "bK3HHxnm0f8A"
       },
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "9ZzTGk2y0f8D"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "-xJft3WH0f8H"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "2r_z67Tb0f8W"
       },
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "d8GRbG1-0f8X"
       },
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "JMiVpJii0f8Y"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -405,14 +405,258 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
-        "id": "MBy_hbXy0f8c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MBy_hbXy0f8c",
+        "outputId": "203c9ab5-6627-4498-bb06-2901173a326d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(30,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
+      "source": [
+        "X_train.min(axis=0).shape"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Preprocessing**"
+      ],
+      "metadata": {
+        "id": "snkV0E7M7kgF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compute the minimum value per feature on the training set\n",
+        "min_on_training = X_train.min(axis=0)"
+      ],
+      "metadata": {
+        "id": "L8uYn7Zj5YsB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compute the range of each feature (max -min) on the training set\n",
+        "range_on_training = (X_train - min_on_training).max(axis=0)"
+      ],
+      "metadata": {
+        "id": "-qw1M0qe73b1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#substract the mine, and divide by range\n",
+        "X_train_scaled = (X_train - min_on_training) / range_on_training"
+      ],
+      "metadata": {
+        "id": "9-CyX5O88e3L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Minimum for each feature\", X_train_scaled.min(axis=0))\n",
+        "print(\"Maximum for each feature\", X_train_scaled.max(axis=0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lu1P-VfABwRq",
+        "outputId": "06ed3631-4730-4eb6-c623-fe917d06a5f4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Minimum for each feature [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+            " 0. 0. 0. 0. 0. 0.]\n",
+            "Maximum for each feature [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.\n",
+            " 1. 1. 1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# scalling for test data\n",
+        "X_test_scaled = (X_test - min_on_training) / range_on_training"
+      ],
+      "metadata": {
+        "id": "iugl4_e5CCwR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating the model"
+      ],
+      "metadata": {
+        "id": "6EUh7fbHChYC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "svc = SVC()\n",
+        "svc.fit(X_train_scaled, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oJRIYYaXCWUF",
+        "outputId": "e127d804-2143-4a16-ab61-df35929ffd4d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Accuracy on training set', svc.score(X_train_scaled, y_train))\n",
+        "print(\"Accuracy on test set\", svc.score(X_test_scaled, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jj-b34tuCpXX",
+        "outputId": "46a134b5-5821-4a96-d3d8-24054699fe3b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy on training set 0.9835680751173709\n",
+            "Accuracy on test set 0.972027972027972\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# An other method of preprocessing\n",
+        "#(X_train -X_train.mean(axis=0)) / X_train.std(axis=0)"
+      ],
+      "metadata": {
+        "id": "xGkw1jSeDAZA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Increase the C parameter**"
+      ],
+      "metadata": {
+        "id": "w1qTeCaaIPLh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "svc = SVC(C=1000)\n",
+        "svc.fit(X_train_scaled, y_train)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7u6ntWuMEcIs",
+        "outputId": "c0d6284f-fe3b-4493-8a28-ce8c718cb3f2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC(C=1000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Training accuracy \", svc.score(X_train_scaled, y_train))\n",
+        "print(\"Test accuracy \", svc.score(X_test_scaled, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h17UdrIxIcvR",
+        "outputId": "1eb5ce9e-3e3c-41ac-f676-a1dea05201e2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training accuracy  1.0\n",
+            "Test accuracy  0.958041958041958\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "pFPxhRyvIrv5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
