Teste de la fonction de décision et sa comparaison à la prédiction

--- a/UncertainEstimatesClassifiers.ipynb
+++ b/UncertainEstimatesClassifiers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "UncertainEstimatesClassifiers",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeC1gjRtLUzv09Fm5aXsUu",
+      "authorship_tag": "ABX9TyOVA6bq0cEp2u7Xas45cmIH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,10 +258,151 @@
     {
       "cell_type": "code",
       "source": [
+        "X_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zgnS7OXeAmM7",
+        "outputId": "157b283a-1cd5-49bf-a7fc-7313fc14b313"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(25, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Voyons le 10 premiers entrées**"
+      ],
+      "metadata": {
+        "id": "z-6h-BaaQPyP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.decision_function(X_test)[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-JNUwTm4F2wp",
+        "outputId": "325f03da-dca7-4856-dd81-5eb592141c4f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 4.13592603, -1.70169917, -3.95106099, -3.62609552,  4.28986642,\n",
+              "        3.66166081, -7.69097179,  4.11001686,  1.10753937,  3.40782222])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Découvrir les prédictions**\n",
+        "\n",
+        "\n",
+        "*   Nous pouvons découvrir les prédictions juste grâce au signe sur les données que renvoie **decision_function()**\n",
+        "*   Du coup nous pouvons voir que **True** représente les données de la classe 1, donc leurs prédictions et **False** représente les données de la **classe 0**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "i4t3cfWpQ6LR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.decision_function(X_test) > 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5gjOKDBcF91J",
+        "outputId": "9c411abd-1fc8-4c8f-920b-2c9d68a329d8"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False, False, False,  True,  True, False,  True,  True,\n",
+              "        True, False,  True,  True, False,  True, False, False, False,\n",
+              "        True,  True,  True,  True,  True, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Decision function:\\n\")\n",
+        "print(model.decision_function(X_test) > 0)\n",
+        "\n",
+        "print('\\nPredictions:\\n')\n",
+        "print(model.predict(X_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4bgIjqt9RXGt",
+        "outputId": "904218e7-c925-4183-ab43-05de39bc2b4f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision function:\n",
+            "\n",
+            "[ True False False False  True  True False  True  True  True False  True\n",
+            "  True False  True False False False  True  True  True  True  True False\n",
+            " False]\n",
+            "\n",
+            "Predictions:\n",
+            "\n",
+            "['red' 'blue' 'blue' 'blue' 'red' 'red' 'blue' 'red' 'red' 'red' 'blue'\n",
+            " 'red' 'red' 'blue' 'red' 'blue' 'blue' 'blue' 'red' 'red' 'red' 'red'\n",
+            " 'red' 'blue' 'blue']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "zgnS7OXeAmM7"
+        "id": "E793qLLvTDLC"
       },
       "execution_count": null,
       "outputs": []
