ajout des commentaires textes

--- a/exercice.ipynb
+++ b/exercice.ipynb
@@ -6,7 +6,7 @@
       "name": "exercice.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPHi+B+Am/dl6J+t2RrP92d",
+      "authorship_tag": "ABX9TyMMiCiDkwIUxg/eAK13YGZR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,6 +165,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Dans la figure précédente nous constatons que l'arbre de décision apprends mieu et donne des bonnes performances qu'un modèle linéaire"
+      ],
+      "metadata": {
+        "id": "u7HTDu_m6zFZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -203,6 +212,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dans la figure précédente nous voyons que l'erreur est différentes du modèle tree mais même allure que le modèle linéaire ce qui nous pousse à résumer que l'**arbre de décsion à de très bonnes performances sur ses points** que le modèle **linéaire**"
+      ],
+      "metadata": {
+        "id": "InUf0e5c7EUd"
+      }
     },
     {
       "cell_type": "code",
