Simple Grid Search Learned

--- a/ModelEvaluation.ipynb
+++ b/ModelEvaluation.ipynb
@@ -1108,7 +1108,11 @@
       "source": [
         "## **Grid Search**\n",
         "\n",
-        "Nous allons voir comment améliorer les performances de modèles en ajustant ses paramètres."
+        "Nous allons voir comment améliorer les performances de modèles en ajustant ses paramètres.\n",
+        "\n",
+        "### **Simple Grid Search**\n",
+        "\n",
+        "Le Grid Search simple consiste à rechercher des paramètres en utilisant une boucle **for** pour évaluer le classificateur"
       ],
       "metadata": {
         "id": "sT2j1u7V7igf"
@@ -1117,10 +1121,73 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from sklearn.svm import SVC"
       ],
       "metadata": {
         "id": "5Na3iDJ93vXw"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, random_state=0)"
+      ],
+      "metadata": {
+        "id": "hpMMMzKcCOkt"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Size of training set: {X_train.shape[0]}\\nSize of test set: {X_test.shape[0]}\")\n",
+        "\n",
+        "best_score = 0\n",
+        "for gamma in [0.001, 0.01, 0.1, 1, 10, 100]:\n",
+        "  for C in [0.001, 0.01, 0.1, 1, 10, 100]:\n",
+        "    svm = SVC(gamma=gamma, C=C)\n",
+        "    svm.fit(X_train, y_train)\n",
+        "\n",
+        "    score = svm.score(X_test, y_test)\n",
+        "\n",
+        "    if score > best_score:\n",
+        "      best_score = score\n",
+        "      best_parameters = {\"C\":C, 'gamma':gamma}\n",
+        "\n",
+        "print(\"Best score {:.2f}\".format(best_score))\n",
+        "print(\"Best parameters: {}\".format(best_parameters))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6k7-rKslCZgc",
+        "outputId": "3fbe0d64-7281-4533-ae94-0d69077208bb"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size of training set: 112\n",
+            "Size of test set: 38\n",
+            "Best score 0.97\n",
+            "Best parameters: {'C': 100, 'gamma': 0.001}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "JFmahexKDyS3"
       },
       "execution_count": null,
       "outputs": []
@@ -1130,6 +1197,7 @@
     "colab": {
       "name": "ModelEvaluation.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
