Learning Metrics for multiclass end

--- a/ModelEvaluation.ipynb
+++ b/ModelEvaluation.ipynb
@@ -3937,6 +3937,7 @@
         "    ylabel='True label', xticklabels=digits.target_names,\n",
         "    yticklabels=digits.target_names, cmap=plt.cm.gray_r, fmt='%d'\n",
         ")\n",
+        "\n",
         "plt.title(\"Confusion matrix\")\n",
         "plt.gca().invert_yaxis()"
       ],
@@ -3967,10 +3968,101 @@
     {
       "cell_type": "code",
       "source": [
+        "print(classification_report(y_test, pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dFxHFHKLPD9i",
+        "outputId": "ff4e6c8d-1e73-4712-f5cd-9ff631d8400c"
+      },
+      "execution_count": 228,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00        37\n",
+            "           1       0.91      0.93      0.92        43\n",
+            "           2       0.98      0.93      0.95        44\n",
+            "           3       0.92      0.98      0.95        45\n",
+            "           4       0.97      0.97      0.97        38\n",
+            "           5       0.98      0.96      0.97        48\n",
+            "           6       0.98      0.98      0.98        52\n",
+            "           7       0.98      0.96      0.97        48\n",
+            "           8       0.90      0.90      0.90        48\n",
+            "           9       0.94      0.94      0.94        47\n",
+            "\n",
+            "    accuracy                           0.95       450\n",
+            "   macro avg       0.95      0.95      0.95       450\n",
+            "weighted avg       0.95      0.95      0.95       450\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La métrique la plus couramment utilisée pour les ensembles de données déséquilibrés dans le cadre multiclasse est\n",
+        "la version multiclasse du f-score. L'idée derrière le f-score multiclasse est de calculer un f-score binaire par classe, cette classe étant la classe positive et l'autre\n",
+        "classes constituant les classes négatives. Ensuite, ces scores f par classe sont moyennés\n",
+        "en utilisant l'une des stratégies suivantes :\n",
+        "\n",
+        "* La moyenne **\"macro\"** calcule les f-scores non pondérés par classe. Cela donne l'égalité\n",
+        "poids à toutes les classes, quelle que soit leur taille.\n",
+        "\n",
+        "* la moyenne **\"average(pondérée)\"** calcule la moyenne des f-scores par classe, pondérée par\n",
+        "leur soutien. C'est ce qui est rapporté dans le rapport de classement.\n",
+        "\n",
+        "* la moyenne **\"micro\"** calcule le nombre total de faux positifs, de faux négatifs,\n",
+        "et les vrais positifs sur toutes les classes, puis calcule la précision, le rappel et f-\n",
+        "score en utilisant ces comptes."
+      ],
+      "metadata": {
+        "id": "PN6kF7qcWO_3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Micro average f1 score {:.3f}\".format(\n",
+        "    f1_score(y_test, pred, average='micro')\n",
+        "))\n",
+        "\n",
+        "print(\"Macro average f1 score {:.3f}\".format(\n",
+        "    f1_score(y_test, pred, average='macro')\n",
+        "))"
+      ],
+      "metadata": {
+        "id": "Q72oWTV5TYEt",
+        "outputId": "18cd8ecb-0201-42dd-df5b-b2ed2af4a8e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 230,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Micro average f1 score 0.953\n",
+            "Macro average f1 score 0.954\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "dFxHFHKLPD9i"
+        "id": "wMoY0G7AX6pA"
       },
       "execution_count": null,
       "outputs": []
