Algoritm chains and pipilines learning, finish

--- a/06_algorithm_chains_and_pipelines.ipynb
+++ b/06_algorithm_chains_and_pipelines.ipynb
@@ -290,7 +290,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 602
+          "height": 503
         },
         "id": "6EUD7wnGhiOk",
         "outputId": "fdd3c9f6-7994-4074-c313-abc63353d001"
@@ -1610,7 +1610,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 260
         },
         "id": "dCkZWDs-hiPR",
         "outputId": "452c14b5-1480-4996-c64f-5ca714ba5afb"
@@ -1748,14 +1748,187 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 82,
       "metadata": {
         "id": "hZdQa4f2hiPU"
       },
       "outputs": [],
       "source": [
-        ""
+        "pipe  = Pipeline([\n",
+        "                  ('preprocessing', StandardScaler()),\n",
+        "                  ('classifier', SVC())\n",
+        "])"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "rgmaa6UektBP"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "RandomForestClassifier?"
+      ],
+      "metadata": {
+        "id": "5hiyQnbJlgM4"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = [\n",
+        "{'classifier': [SVC()], 'preprocessing': [StandardScaler(), None],\n",
+        "'classifier__gamma': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+        "'classifier__C': [0.001, 0.01, 0.1, 1, 10, 100]},\n",
+        "\n",
+        "{'classifier': [RandomForestClassifier(n_estimators=100)],\n",
+        "'preprocessing': [None], 'classifier__max_features': [1, 2, 3]}]"
+      ],
+      "metadata": {
+        "id": "S8c0HJDCislR"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(cancer.data, cancer.target,\n",
+        "                                                    random_state=0)"
+      ],
+      "metadata": {
+        "id": "suDPm6oQlzGV"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid = GridSearchCV(pipe, param_grid, cv=5)"
+      ],
+      "metadata": {
+        "id": "n1JClxmol-wX"
+      },
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TFXj9mNwmKbv",
+        "outputId": "33faf25c-33a6-4ae5-a999-e5399b88038d"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GridSearchCV(cv=5,\n",
+              "             estimator=Pipeline(steps=[('preprocessing', StandardScaler()),\n",
+              "                                       ('classifier', SVC())]),\n",
+              "             param_grid=[{'classifier': [SVC(C=10, gamma=0.01)],\n",
+              "                          'classifier__C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+              "                          'classifier__gamma': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+              "                          'preprocessing': [StandardScaler(), None]},\n",
+              "                         {'classifier': [RandomForestClassifier()],\n",
+              "                          'classifier__max_features': [1, 2, 3],\n",
+              "                          'preprocessing': [None]}])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid.best_estimator_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jfJpYuGnmNnE",
+        "outputId": "742c340e-c91b-4c7a-965d-cc44dcbec529"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('preprocessing', StandardScaler()),\n",
+              "                ('classifier', SVC(C=10, gamma=0.01))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Nous voyons que de deux modèle proposés, le modèle qui donnerai de bonne performance est SVC"
+      ],
+      "metadata": {
+        "id": "T-PUrLsrm7Q4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid.score(X_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tE7Z6b5kmdfj",
+        "outputId": "5af996aa-24fa-48b7-f3bd-0a2a993deef0"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9790209790209791"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "o6mCk_-knIoP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
