--- a/ML_UP.ipynb
+++ b/ML_UP.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlaAQw1+Zs9eFtSmFqyFgN",
+      "authorship_tag": "ABX9TyPYwmDLl39oCI3Kzng9uZzr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10613,10 +10613,398 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Create a dataset\n",
+        "features, _ = make_blobs(\n",
+        "    n_samples=10,\n",
+        "    n_features=2,\n",
+        "    centers=1,\n",
+        "    random_state=1\n",
+        ")"
       ],
       "metadata": {
         "id": "3OPlmSQVn9xS"
+      },
+      "execution_count": 151,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6XvuC7aogNz",
+        "outputId": "923cba88-35ff-4a1a-a2fe-da8c8b0b23eb"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.83198811,  3.52863145],\n",
+              "       [-2.76017908,  5.55121358],\n",
+              "       [-1.61734616,  4.98930508],\n",
+              "       [-0.52579046,  3.3065986 ],\n",
+              "       [ 0.08525186,  3.64528297],\n",
+              "       [-0.79415228,  2.10495117],\n",
+              "       [-1.34052081,  4.15711949],\n",
+              "       [-1.98197711,  4.02243551],\n",
+              "       [-2.18773166,  3.33352125],\n",
+              "       [-0.19745197,  2.34634916]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features[0, 0] = 1000\n",
+        "features[0, 1] = 1000"
+      ],
+      "metadata": {
+        "id": "BycPzp_PoqVy"
+      },
+      "execution_count": 153,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eve2Gnlpo0X1",
+        "outputId": "acaf3189-efbe-41a6-eb04-ea3c1b80a02d"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1.00000000e+03,  1.00000000e+03],\n",
+              "       [-2.76017908e+00,  5.55121358e+00],\n",
+              "       [-1.61734616e+00,  4.98930508e+00],\n",
+              "       [-5.25790464e-01,  3.30659860e+00],\n",
+              "       [ 8.52518583e-02,  3.64528297e+00],\n",
+              "       [-7.94152277e-01,  2.10495117e+00],\n",
+              "       [-1.34052081e+00,  4.15711949e+00],\n",
+              "       [-1.98197711e+00,  4.02243551e+00],\n",
+              "       [-2.18773166e+00,  3.33352125e+00],\n",
+              "       [-1.97451969e-01,  2.34634916e+00]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 154
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features[:5][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3UWoENOpGFY",
+        "outputId": "d3150769-7e9d-4d4b-b230-d87b3212f69d"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1000., 1000.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 155
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create detector\n",
+        "outlier_detector = EllipticEnvelope()"
+      ],
+      "metadata": {
+        "id": "saH71woFpPmY"
+      },
+      "execution_count": 156,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fit the detector\n",
+        "outlier_detector.fit(features)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "57A543mBptQu",
+        "outputId": "a9c83bb7-4578-42cf-ea3e-b2417caa4518"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "EllipticEnvelope()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict outliers\n",
+        "outlier_detector.predict(features)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DhmaoU0Fp420",
+        "outputId": "4cebabe2-8c2b-4173-dabf-7344e79e6afe"
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-1,  1,  1,  1,  1,  1,  1,  1,  1,  1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4.7 Handling Outliers"
+      ],
+      "metadata": {
+        "id": "SUavAH5jsLHv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create dataframe\n",
+        "houses = pd.DataFrame()"
+      ],
+      "metadata": {
+        "id": "JP4gtbk6qAzN"
+      },
+      "execution_count": 159,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "houses['price'] = [534433, 392333, 293222, 4322032]\n",
+        "houses[\"Bathrooms\"] = [2, 3.5, 2, 116]\n",
+        "houses[\"Square_feet\"] = [1500, 2500, 1500, 48000]"
+      ],
+      "metadata": {
+        "id": "GDcBRBcvsWga"
+      },
+      "execution_count": 160,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "houses"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "Iwn25ldqsu41",
+        "outputId": "5ba67b63-7a92-4dc3-bb94-d40a3320d1ee"
+      },
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     price  Bathrooms  Square_feet\n",
+              "0   534433        2.0         1500\n",
+              "1   392333        3.5         2500\n",
+              "2   293222        2.0         1500\n",
+              "3  4322032      116.0        48000"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-37a564ad-8e2e-464b-9b5e-e45a61c44727\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>price</th>\n",
+              "      <th>Bathrooms</th>\n",
+              "      <th>Square_feet</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>534433</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>392333</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>293222</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4322032</td>\n",
+              "      <td>116.0</td>\n",
+              "      <td>48000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-37a564ad-8e2e-464b-9b5e-e45a61c44727')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-37a564ad-8e2e-464b-9b5e-e45a61c44727 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-37a564ad-8e2e-464b-9b5e-e45a61c44727');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "j-MtYzYWswJn"
       },
       "execution_count": null,
       "outputs": []
