Learning Discretizing features ended and Starting Learning Grouping Observations using Clustering

--- a/ML_UP.ipynb
+++ b/ML_UP.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO8rfsNjF9yanZsPoAQ8VHo",
+      "authorship_tag": "ABX9TyOW2oW+REIYcVc5Y3zXBHvf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11535,10 +11535,202 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Load the libray\n",
+        "from sklearn.preprocessing import Binarizer"
       ],
       "metadata": {
         "id": "uyGT0YsZt86S"
+      },
+      "execution_count": 168,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = np.array([[6],\n",
+        "[12],\n",
+        "[20],\n",
+        "[36],\n",
+        "[65]])\n",
+        "\n",
+        "age"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4k0JM8nxvffD",
+        "outputId": "7799e5e0-c717-42ec-de06-df4908972a52"
+      },
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 6],\n",
+              "       [12],\n",
+              "       [20],\n",
+              "       [36],\n",
+              "       [65]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create binarizer\n",
+        "binarizer = Binarizer()"
+      ],
+      "metadata": {
+        "id": "zJ-QvU2twRnm"
+      },
+      "execution_count": 172,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "binarizer.fit_transform(age)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b1-z630CxoZY",
+        "outputId": "d633fa7a-e0d1-4dea-9aee-925a8b80d96a"
+      },
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Bin feature\n",
+        "np.digitize(age, bins=[20, 30, 64])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pAz4MATLyQek",
+        "outputId": "ebc71d9a-71e6-44d0-a672-3853f801f5f8"
+      },
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [2],\n",
+              "       [3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Bin feature include the right member\n",
+        "np.digitize(age, bins=[20,30,64], right=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8aV2XtX0y6vf",
+        "outputId": "9a806a8f-07a0-44db-f7d8-dadfc964fd28"
+      },
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [2],\n",
+              "       [3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Bin into two groups\n",
+        "np.digitize(age, bins=[18])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DZBb7NpszRzi",
+        "outputId": "23f01d30-d81b-4208-cbd9-deb19b7c2263"
+      },
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4.9 Grouping Observations Using Clustering"
+      ],
+      "metadata": {
+        "id": "LDe35dbXz8oy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "SsbdAtWOzy8B"
       },
       "execution_count": null,
       "outputs": []
