Learning Delecting Observations Values

--- a/ML_UP.ipynb
+++ b/ML_UP.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJA9CGqxrlkAYWSwDgBfr9",
+      "authorship_tag": "ABX9TyPL+VuQhakzEWdnyTNYHc6h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12192,6 +12192,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4.10 Deleting Observations with Missing Values"
+      ],
+      "metadata": {
+        "id": "E2XJ0m7F84XJ"
+      }
     },
     {
       "cell_type": "code",
