Start Learning Encoding Dictionnary of features

--- a/ML_UP.ipynb
+++ b/ML_UP.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOViVImd3NH6rKDi5j4q1F",
+      "authorship_tag": "ABX9TyM1/nmkh93p5uWJlVh5eM5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13815,6 +13815,15 @@
           "execution_count": 50
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5.3 Encoding Dictionaries of Features"
+      ],
+      "metadata": {
+        "id": "hyFIqorFpHZO"
+      }
     },
     {
       "cell_type": "code",
